[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
]

[project]
name = "process-stats-exporter"
description = "Export Prometheus metrics for processes and tasks"
readme = "README.rst"
keywords = [
  "exporter",
  "metric",
  "process",
  "prometheus",
]
license = {file = "LICENSE.txt"}
maintainers = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
authors = [
    {name = "Alberto Donato", email = "alberto.donato@gmail.com"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: GNU General Public License (GPLv3+)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Utilities",
]
dynamic = [
  "version",
]
dependencies = [
  "lxstats",
  "prometheus_aioexporter",
]
[project.optional-dependencies]
testing = [
  "pytest",
]
[project.urls]
changelog = "https://github.com/albertodonato/process-stats-exporter/blob/main/CHANGES.rst"
homepage = "https://github.com/albertodonato/process-stats-exporter"
repository = "https://github.com/albertodonato/process-stats-exporter"
[project.scripts]

[tool.setuptools.dynamic]
version = {attr = "process_stats_exporter.__version__"}

[tool.setuptools.packages.find]
include = ["process_stats_exporter*"]

[tool.black]
line-length = 79

[tool.isort]
combine_as_imports = true
force_grid_wrap = 2
force_sort_within_sections = true
from_first = false
include_trailing_comma = true
multi_line_output = 3
order_by_type = false
profile = "black"
use_parentheses = true

[tool.flake8]
ignore = ["E203", "E501", "W503"]
max-line-length = 80
select = ["C", "E", "F", "W", "B", "B950"]

[tool.coverage.report]
fail_under = 100.0
show_missing = true
skip_covered = true

[tool.coverage.run]
source = ["process_stats_exporter"]
omit = ["process_stats_exporter/main.py"]

[tool.mypy]
ignore_missing_imports = true
install_types = true
non_interactive = true
# strict = true
warn_return_any = true
warn_unused_configs = true
