[metadata]
name = process-stats-exporter
version = 0.0.1
license = GPLv3+
description = Export Prometheus metrics for processes and tasks
long_description = file: README.rst
author = Alberto Donato
author_email = alberto.donato@gmail.com
maintainer = Alberto Donato
maintainer_email = alberto.donato@gmail.com
url = https://github.com/albertodonato/process-stats-exporter
keywords = metric, prometheus, process, exporter
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: System Administrators
    License :: OSI Approved :: GNU General Public License (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Utilities

[options]
python_requires = >= 3.6
install_requires =
    lxstats
    prometheus_aioexporter
packages = find:
include_package_data = True

[options.packages.find]
include =
    process_stats_exporter
    process_stats_exporter.*

[options.extras_require]
testing =
    pytest

[options.entry_points]
console_scripts =
    process-stats-exporter = process_stats_exporter.main:script

[globals]
lint_files = setup.py process_stats_exporter

[coverage:run]
source = process_stats_exporter
omit =
  process_stats_exporter/main.py

[coverage:report]
show_missing = True
fail_under = 100.0
skip_covered = True

[flake8]
max-line-length = 80
select = C, E, F, W, B, B950
ignore = E203, E501, W503

[mypy]
incremental = False
warn_return_any = True
warn_unused_configs = True
ignore_missing_imports = True

[tox]
skipsdist = True

[testenv]
deps =
    .
    .[testing]
commands =
    {envbindir}/pytest {posargs}

[testenv:format]
deps =
    black
    isort
commands =
    {envbindir}/isort {[globals]lint_files}
    {envbindir}/black -q {[globals]lint_files}

[testenv:lint]
deps =
    black
    flake8
    isort
commands =
    {envbindir}/isort --check-only --diff {[globals]lint_files}
    {envbindir}/black --check {[globals]lint_files}
    {envbindir}/flake8 {[globals]lint_files}

[testenv:check]
deps =
    mypy
commands =
    {envbindir}/mypy -p process_stats_exporter {posargs}

[testenv:coverage]
deps =
    .
    .[testing]
    pytest-cov
commands =
    {envbindir}/pytest --cov {posargs}

[testenv:run]
deps =
    .
commands =
    {envbindir}/process-stats-exporter {posargs}
